--- a/jokedisplayer/src/main/res/values/strings.xml
+++ b/jokedisplayer/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JokeDisplayer</string>
+    <string name="error_no_joke">So sorry, but there has been an error. No humor for you.</string>
 </resources>
